--- a/style.css
+++ b/style.css
@@ -103,6 +103,16 @@ p{
   font-size:10vw;
   vertical-align: middle;
   margin-left:3vw;
+  cursor:pointer;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+
 }
 
 
@@ -123,7 +133,7 @@ p{
 @media (orientation:portrait){
 
   body{
-    font-size:200%;
+    font-size:70%;
   }
 
   #header{
